--- a/index.html
+++ b/index.html
@@ -4,17 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>دعوتنامه عروسی</title>
-    <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- <div class="bodybg">
-        <video autoplay muted loop id="bg-video">
-            <source src="3d-wedding-invitation-greeti...ce_1278346-18924_animation.mp4" type="video/mp4">
-            مرورگر شما از این ویدئو پشتیبانی نمی‌کند.
-        </video>
-    </div> -->
-    <div class="bodybg">
-        
+    <!-- ویدیو پس‌زمینه -->
+    <video autoplay muted loop id="bg-video">
+        <source src="msinnnn.mp4" type="video/mp4">
+        مرورگر شما از این ویدئو پشتیبانی نمی‌کند.
+    </video>
+
+    <!-- کارت دعوت -->
+    <div class="invitation">
+        <div class="header-text">از شما دعوت می‌شود برای حضور در مراسم ازدواج</div>
+        <div class="names">علی و فاطمه</div>
+        <div class="date">5 اسفند 1402</div>
+        <div class="details">
+            ساعت 19:00<br>
+            تالار پردیس<br>
+            تهران، خیابان ولیعصر
+        </div>
+
+        <!-- شعر -->
+        <div class="poem">
+            عشق بهانه آغاز بود<br>
+            آغاز قشنگ‌ترین صبحدمان زندگی<br>
+            عشق بهانه سبز با هم زیستن بود<br>
+            و اینک وصال...<br>
+            بارش خوشبختی است بر آشیان عاشق‌ترین دست‌ها<br>
+            رونق بهاری‌ترین ثانیه‌های زندگی ما باشید
+        </div>
+
+        <div class="border-decoration"></div>
     </div>
 </body>
 </html>
