--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 </head>
 <body>
     <!-- ویدیو پس‌زمینه -->
-    <video autoplay muted loop id="bg-video">
+    <video id="bg-video" autoplay muted loop playsinline>
         <source src="msinnnn.mp4" type="video/mp4">
-        مرورگر شما از این ویدئو پشتیبانی نمی‌کند.
+        مرورگر شما از پخش این ویدیو پشتیبانی نمی‌کند.
     </video>
+    
 
     <!-- کارت دعوت -->
     <div class="invitation">
         <div class="header-text">از شما دعوت می‌شود برای حضور در مراسم ازدواج</div>
-        <div class="names">علی و فاطمه</div>
+        <div class="names">سعید و فاطمه</div>
         <div class="date">5 اسفند 1402</div>
         <div class="details">
             ساعت 19:00<br>
