--- a/index.html
+++ b/index.html
@@ -4,16 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>دعوتنامه عروسی</title>
-<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- ویدیو پس‌زمینه -->
-    <video id="bg-video" autoplay muted loop playsinline>
-        <source src="msinnnn.mp4" type="video/mp4">
-        مرورگر شما از پخش این ویدیو پشتیبانی نمی‌کند.
-    </video>
+  <div class="container">
+    <img src="IMG_20241019_191810.jpg" class="bg-img" alt="Background Image">
     
-
     <!-- کارت دعوت -->
     <div class="invitation">
         <div class="header-text">از شما دعوت می‌شود برای حضور در مراسم ازدواج</div>
@@ -27,15 +23,16 @@
 
         <!-- شعر -->
         <div class="poem">
-            عشق بهانه آغاز بود<br>
-            آغاز قشنگ‌ترین صبحدمان زندگی<br>
-            عشق بهانه سبز با هم زیستن بود<br>
-            و اینک وصال...<br>
-            بارش خوشبختی است بر آشیان عاشق‌ترین دست‌ها<br>
-            رونق بهاری‌ترین ثانیه‌های زندگی ما باشید
+            عشق، بهانه‌ی آغاز بود<br>
+            آغاز قشنگ‌ترین صبحدمان زندگی<br><br>
+            عشق، بهانه‌ای سبز برای هم‌زیستی<br>
+            و اینک وصال...<br><br>
+            بارش خوشبختی بر آشیان عاشق‌ترین دست‌هاست<br>
+            و رونق بهاری‌ترین ثانیه‌های زندگی ما باشید...
         </div>
-
+        
         <div class="border-decoration"></div>
     </div>
+  </div>
 </body>
 </html>
