--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- کارت دعوت -->
     <div class="invitation">
         <div class="header-text">از شما دعوت می‌شود برای حضور در مراسم ازدواج</div>
-        <div class="names">سعید و فاطمه</div>
+        <div class="names">سعید و سارینا</div>
         <div class="date">5 اسفند 1402</div>
         <div class="details">
             ساعت 19:00<br>
