--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="time-range" dir="rtl">19 الی 23</div>
         </div>
       
-        <div class="details">آدرس تالار:  تالار پالادیوم </div>
+        <div class="details">آدرس تالار:   باغ تالار پالادیوم </div>
 
         <!-- شعر زیبا -->
         <div class="poem">
@@ -36,7 +36,7 @@
                 بیا و عشق را در دل‌هایمان جاری کنیم
                 با تو هر روز یک شعر جدید می‌نویسم
             </p>
-            <br>
+            <!-- <br> -->
         </div>
     </div>
   </div>
