--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p>            در آغوش تو زندگی معنی می‌یابد
                 با تو هر روز یک شعر جدید می‌نویسم
                 بیا و عشق را در دل‌هایمان جاری کنیم
-                با تو هر روز یک شعر جدید می‌نویسم
+                با تو هر روز یک شعر  
             </p>
             <!-- <br> -->
         </div>
