bg hover active

--- a/index.html
+++ b/index.html
@@ -1,44 +1,48 @@
 <!DOCTYPE html>
 <html lang="fa">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>دعوتنامه عروسی</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <div class="container">
-    <img src="IMG_20241019_191810.jpg" class="bg-img" alt="Background Image">
-    <!-- کارت دعوت -->
-    <div class="invitation">
-        <span class="title">بنام حضرت عشق</span>
-        <div class="span_top"> آغاز قشنگ‌ترین عشق، بهانه‌ی آغاز بود </div>
-        <div class="span_top_down"> بارش خوشبختی بر آشیان عشق، بهانه‌ای سبز برای هم‌زیستی </div>
+    <div class="container">
+        <!-- <img src="IMG_20241019_191810.jpg" class="bg-img" alt="Background Image"> -->
+        <img src="image/top__left.jpg" class="top__left" alt="Background Image">
+        <img src="image/top__right.jpg" class="top__right" alt="Background Image">
+        <img src="image/bottom__left.jpg" class="bottom__left" alt="Background Image">
+        <img src="image/bottom__right.jpg" class="bottom__right" alt="Background Image">
 
-        <!-- اطلاعات عروس و داماد -->
-        <div class="names-container">
-            <div class="names">سعید رضایی</div>
-            <div class="names">فاطی عزیزی</div>
-        </div>
-        
-        <!-- تاریخ و آدرس تالار -->
-        <div class="date">تاریخ: ۱۴۰۳/۰۸/۰۳
-            <span class="month">(آبان)</span>
-            <div class="time-range" dir="rtl">19 الی 23</div>
-        </div>
-      
-        <div class="details">آدرس تالار:   باغ تالار پالادیوم </div>
+        <!-- کارت دعوت -->
+        <div class="invitation">
+            <span class="title">بنام حضرت عشق</span>
+            <div class="span_top">به سنت عشق گرد هم آییم</div>
+            <div class="span_top_down">آنجا که دوست داشتن تنها کلام زندگی است</div>
 
-        <!-- شعر زیبا -->
-        <div class="poem">
-            <p>            در آغوش تو زندگی معنی می‌یابد
-                با تو هر روز یک شعر جدید می‌نویسم
-                بیا و عشق را در دل‌هایمان جاری کنیم
-                با تو هر روز یک   
-            </p>
-            <!-- <br> -->
+            <!-- اطلاعات عروس و داماد -->
+            <div class="names-container">
+                <div class="names">اقا میرزا محمد علی شیرازی</div>
+                <div class="names">زهرا سید محمدباقر موسوی زاده قمی</div>
+            </div>
+
+            <!-- تاریخ و آدرس تالار -->
+            <div class="date">تاریخ: ۱۴۰4/۰1/28
+                <div class="time-range" dir="rtl">19 الی 23
+                    <span class="month">(به صرف شام)</span>
+                </div>
+            </div>
+
+            <div class="details">آدرس تالار: اصفهان، کوی امام جعفر صادق، باغ عمارت قصر سفید</div>
+
+            <!-- شعر زیبا -->
+            <div class="poem">
+                <p>به مناسبت مراسم عقد و عروسی پیوند آقا میرزا محمد علی و سیده خانم زهرا سادات برایمان ارزشمند است و خوشحال می‌شویم که این شادی را با شما به اشتراک بگذاریم. حضور گرم و صمیمی شما در این جشن موجب شادی و افتخار ما خواهد بود.</p>
+            </div>
         </div>
     </div>
-  </div>
 </body>
+
 </html>
