project date now in oky

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
 
-            <div class="details">آدرس تالار: اصفهان، کوی امام جعفر صادق، باغ عمارت قصر سفید</div>
+            <div class="details">آدرس : اصفهان، کوی امام جعفر صادق، باغ عمارت قصر سفید</div>
 
             <!-- شعر زیبا -->
             <div class="poem">
