--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <!-- Swiper Container -->
     <div class="swiper-container">
         <div class="swiper-wrapper">
-
             <!-- Slide 1: دعوتنامه -->
             <div class="swiper-slide">
                 <div class="container">
@@ -50,7 +49,7 @@
             <!-- Slide 2: به نام خدا -->
             <div class="swiper-slide myslider2">
                 <div class="slide-content">
-                    
+                    Lorem, ipsum.
                 </div>
             </div>
 
@@ -62,32 +61,30 @@
 
     <!-- Swiper JS (Local) -->
     <script src="/node_modules/swiper/swiper-bundle.min.js"></script>
-
     <script>
-      var swiper = new Swiper('.swiper-container', {
-    slidesPerView: 1, // نمایش تنها یک اسلاید در هر لحظه
-    spaceBetween: 0, // فاصله بین اسلایدها را صفر کنید
-    loop: true, // برای چرخش مداوم اسلایدها
-    navigation: {
-        nextEl: '.swiper-button-next',
-        prevEl: '.swiper-button-prev',
-    },
-    pagination: {
-        el: '.swiper-pagination',
-        clickable: true,
-    },
-    autoplay: {
-                delay: 1000, // تاخیر 1 ثانیه برای تغییر خودکار اسلایدها
-            },
-});
-
-
-        // دکمه بستن پیام چرخش صفحه
-        let closebtn = document.querySelector(".close-icon");
-        closebtn.addEventListener("click", function () {
-            document.querySelector(".rotate-message").style.display = "none";
-        });
-    </script>
+        var swiper = new Swiper('.swiper-container', {
+      slidesPerView: 1, // نمایش تنها یک اسلاید در هر لحظه
+      spaceBetween: 0, // فاصله بین اسلایدها را صفر کنید
+      loop: true, // برای چرخش مداوم اسلایدها
+      navigation: {
+          nextEl: '.swiper-button-next',
+          prevEl: '.swiper-button-prev',
+      },
+      pagination: {
+          el: '.swiper-pagination',
+          clickable: true,
+      },
+      autoplay: {
+                  delay: 1000, // تاخیر 1 ثانیه برای تغییر خودکار اسلایدها
+              },
+  });
+  
+          // دکمه بستن پیام چرخش صفحه
+          let closebtn = document.querySelector(".close-icon");
+          closebtn.addEventListener("click", function () {
+              document.querySelector(".rotate-message").style.display = "none";
+          });
+      </script>
 </body>
 
 </html>
