project is done

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                             <span class="separator">الی</span>
                             <span class="end-time">۲۳</span>
                             <span class="dinner">(به صرف شام)</span>
-                        </div>                    </div>
+                        </div>             
+                           </div>
                 </div>
             </div>
             
