--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
 </head>
 
 <body>
+    <div id="loader">
+        <div class="spinner"></div>
+    </div>
+
+    <div class="rotate-message">
+        لطفاً گوشی را به حالت عمودی برگردانید
+        <br>
+        برای دید بهتر
+        <span class="close-icon">×</span>
+    </div>
     <div class="rotate-message">
         لطفاً گوشی را به حالت عمودی برگردانید
         <br>
@@ -122,7 +132,11 @@
         <script>
             const progressCircle = document.querySelector(".autoplay-progress svg");
             const progressContent = document.querySelector(".autoplay-progress span");
-        
+           // نمایش لودر تا زمانی که صفحه کامل لود شود
+           window.addEventListener("load", function () {
+            document.getElementById("loader").style.display = "none";
+            document.body.classList.add("loaded");
+        });
             var swiper = new Swiper(".mySwiper", {
                 spaceBetween: 30,
                 centeredSlides: true,
