--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 <body>
 
-    <audio id="myAudio">
-        <source src="path/to/your/song.mp3" type="audio/mpeg">
+    <audio id="myAudio" autoplay >
+        <source src="music.mp3"  type="audio/mpeg">
         متن جایگزین برای مرورگرهای قدیمی
     </audio>
     
