--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
 </head>
 
 <script>
-                var audio = document.getElementById("myAudio");  // پخش فایل صوتی
-                audio.play();
-                audio.currentTime = 0
+    var audio = document.getElementById("myAudio");  // پخش فایل صوتی
+    audio.play();
+    audio.currentTime = 0
 </script>
+
 <body>
 
     <audio id="myAudio" autoplay >
         <source src="music.mp3"  type="audio/mpeg">
         متن جایگزین برای مرورگرهای قدیمی
     </audio>
-    
+
 
     <div class="rotate-message">
         لطفاً گوشی را به حالت عمودی برگردانید
@@ -49,9 +50,9 @@
                                 <h1 class="inventtext">«شما دعوت شدید به جشن عروسی»</h1>
                             </div>
                             <div class="container_img">
-                                <img src="image/گل سمت چپ.png" class="bottom__left_firsr" alt="">
-                                <img src="image/برگ-وسطی.png" class="bottom__left_secend" alt="">
-                                <img src="image/گل سمت راست.png" class="bottom__left_therd" alt="">
+                                <img src="image/گل سمت چپ.png" class="bottom__left_firsr" alt="image/گل سمت چپ.png">
+                                <img src="image/برگ-وسطی.png" class="bottom__left_secend" alt="image/برگ-وسطی.png">
+                                <img src="image/گل سمت راست.png" class="bottom__left_therd" alt="image/گل سمت راست.png">
                             </div>
                         </div>
                     </div>
@@ -104,7 +105,7 @@
                 </div>
             </div>
             <div class="swiper-slide ">
-               <div class="bg_img"></div>
+                <div class="bg_img"></div>
             </div>
 
             <!-- Slide 3: به نام خدا -->
@@ -154,10 +155,22 @@
         <script>
             const progressCircle = document.querySelector(".autoplay-progress svg");
             const progressContent = document.querySelector(".autoplay-progress span");
+            var audio = document.getElementById("myAudio");
+
+            document.addEventListener('DOMContentLoaded', function () {
+                audio.muted = false;  // پس از لود شدن صفحه، صدا را فعال کنید
+                audio.play();  // پخش فایل صوتی
+
+                // مخفی کردن لودر
+                document.getElementById('loader').style.display = 'none';
+                // نمایش محتوای اصلی
+                document.getElementById('content').style.display = 'block';
+            });
+
             var swiper = new Swiper(".mySwiper", {
                 spaceBetween: 30,
                 centeredSlides: true,
-                loop: false, // غیرفعال کردن لوپ
+                loop: false,
                 autoplay: {
                     delay: 10000, // تاخیر 1 ثانیه‌ای
                     disableOnInteraction: false
@@ -197,29 +210,25 @@
                         // شرط آخرین اسلاید و پایان تایمر
                         if (time <= 100 && swiper.isEnd) {
                             swiper.autoplay.stop(); // توقف اسلایدر
-                            audio.pause(); // توقف آهنگ
-                            audio.currentTime = 0; // بازنشانی پخش آهنگ
                             document.getElementById("endModal").style.display = "flex"; // نمایش مدال
-
                             return; // متوقف کردن اجرای کد در اینجا
                         }
                     }
                 }
             });
 
-            // کلیک روی دکمه "باز پخش"
+            // دکمه بازپخش
             document.getElementById("replayButton").addEventListener("click", function () {
-                swiper.slideTo(0); // بازگشت به اسلاید اول
-                audio.play(); // دوباره پخش کردن فایل صوتی
-                swiper.autoplay.start(); // شروع دوباره اسلایدر
-                document.getElementById("endModal").style.display = "none"; // بستن مدال
+                document.getElementById("endModal").style.display = "none";   // بستن مدال
+                swiper.autoplay.stop();  // توقف اتوپلی فعلی
+                swiper.slideTo(0);  // بازگشت به اسلاید اول
+                swiper.autoplay.start();  // شروع دوباره اتوپلی
+                swiper.autoplay.start();  // شروع دوباره اتوپلی
+                audio.currentTime = 0;  // بازگشت به شروع فایل صوتی
+                audio.play();  // پخش دوباره آهنگ
             });
+
         </script>
-
-
-
-
-
         <script>
             let closebtn = document.querySelector(".close-icon");
             closebtn.addEventListener("click", function () {
