--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
     <audio id="myAudio" autoplay>
-        <source src="mسusic.mp3" type="audio/mpeg">
+        <source src="music.mp3" type="audio/mpeg">
         متن جایگزین برای مرورگرهای قدیمی
     </audio>
 
