--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 <body>
 
-    <audio id="myAudio" autoplay>
-        <source src="music.mp3" type="audio/mpeg">
+    <audio id="myAudio" autoplay >
+        <source src="musisc.mp3" type="audio/mpeg">
         متن جایگزین برای مرورگرهای قدیمی
     </audio>
 
@@ -66,7 +66,7 @@
                     <img src="image/bottom__right.jpg" class="bottom__right" alt="Background Image">
                     <div class="invitation">
                         <span class="title">بنام حضرت عشق</span>
-                        <div class="span_top    ">به سنت عشق گرد هم آییم</div>
+                        <div class="span_top">به سنت عشق گرد هم آییم</div>
                         <div class="span_top_down   ">آنجا که دوست داشتن تنها کلام
                             زندگی است</div>
                             <div class="names-container">
